console.log(e.message))
[eval]:1
import('./node_modules/vitest/dist/entry.js').then(()
                                                    ^
Parenthesized expression cannot be empty

SyntaxError: Unexpected token ')'
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:420:10)
    at evalTypeScript (node:internal/process/execution:292:22)
    at node:internal/main/eval_string:71:3

Node.js v26.2.0
